修复timepicker datepicker显示不全的bug

--- a/package.json
+++ b/package.json
@@ -100,7 +100,9 @@
   },
   "browserslist": [
     "> 1%",
-    "last 2 versions",
+    "last 5 versions",
+    "ios >= 7",
+    "android > 4.4",
     "not ie <= 8"
   ]
 }
