--- a/package.json
+++ b/package.json
@@ -82,12 +82,12 @@
     "sinon": "^1.17.7",
     "sinon-chai": "^2.8.0",
     "url-loader": "^0.5.7",
-    "vue": "2.1.8",
-    "vue-i18n": "4.7.4",
-    "vue-loader": "^11.1.4",
+    "vue": "^2.2.6",
+    "vue-i18n": "5.0.3",
+    "vue-loader": "^11.3.3",
     "vue-router": "^2.3.0",
     "vue-style-loader": "^2.0.0",
-    "vue-template-compiler": "2.1.8",
+    "vue-template-compiler": "^2.2.6",
     "webpack": "^2.2.1",
     "webpack-bundle-analyzer": "^2.2.1",
     "webpack-dev-middleware": "^1.10.0",
